# ros_templates

./: .gitignore  .gitlab-ci.yml  README.md  compose.yaml
.devcontainer/: devcontainer.json
docker/: Dockerfile  entrypoint.sh
src/actions_cpp/: CMakeLists.txt  package.xml
src/actions_cpp/include/actions_cpp/: count_until_action_includes.hpp  goal_policy.hpp  move_robot_action_includes.hpp
src/actions_cpp/src/: count_until_client.cpp  count_until_server.cpp  lifecycle_move_robot_server.cpp  move_robot_client.cpp  move_robot_server.cpp
src/actions_py/: package.xml  setup.py
src/actions_py/actions_py/: count_until_client.py  count_until_server.py
src/components_cpp/: CMakeLists.txt
src/components_cpp/include/components_cpp/: node1.hpp  number_publisher.hpp
src/components_cpp/src/: manual_composition.cpp  node1.cpp  node2.cpp  number_publisher.cpp
src/components_py/components_py/: manual_composition.py
src/demo_cpp_package/: CMakeLists.txt  package.xml
src/demo_cpp_package/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  number_publisher.cpp  simple_node.cpp  simple_subscriber.cpp
src/demo_interfaces/: CMakeLists.txt  package.xml
src/demo_interfaces/msg/: LedState.msg
src/demo_interfaces/srv/: SetLed.srv
src/demo_python_package/: package.xml  setup.py
src/demo_python_package/demo_python_package/: add_two_ints_client.py  add_two_ints_server.py  hardware_status_publisher.py  number_counter.py  simple_node.py  simple_subscriber.py
src/demo_robot_description/: CMakeLists.txt  package.xml
src/demo_robot_description/launch/: display.launch.py  display.launch.xml
src/demo_robot_description/rviz/: mobile_base_with_sensors.rviz  rviz_config.rviz
src/demo_robot_description/urdf/: common_properties.xacro  mobile_base_with_arm.urdf.xacro  mobile_base_with_sensors.urdf.xacro  standalone_arm.urdf.xacro
src/demo_robot_description/urdf/robot_parts/: combined_robot.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  simple_arm.xacro  simple_arm_gazebo.xacro
src/demo_robot_description/urdf/sensors/: 2d_lidar.xacro  camera.xacro
src/demo_services/: CMakeLists.txt  package.xml
src/demo_services/src/: BatteryNode.cpp  LedPanelNode.cpp
src/killer_turtle/: CMakeLists.txt  package.xml
src/killer_turtle/include/killer_turtle/: Position.hpp
src/killer_turtle/src/: ControllerNode.cpp  SpawnerNode.cpp
src/lifecycle_py/: setup.py
src/lifecycle_py/lifecycle_py/: lifecycle_move_action_manager.py
src/recursive_service_py/: ReadMe.md  package.xml  setup.cfg  setup.py
src/recursive_service_py/launch/: recursive_service.launch.py
src/recursive_service_py/recursive_service_py/: add_two_ints_server.py  inner_server.py  outer_client.py  outer_server.py  recursive_server.py
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/launch/: components.launch.py  components.launch.xml  demo_robot_gazebo.launch.py  killer_turtle.launch.py  lifecycle_move_action.launch.py  lifecycle_nodes.launch.py  lifecycle_nodes.launch.xml  number_app.launch.py
src/robot_bringup/worlds/: floor_plan.world  racing_track.world
src/turtle_msgs/: CMakeLists.txt  package.xml
src/turtle_msgs/msg/: Turtle.msg
src/turtle_msgs/srv/: KillTurtle.srv
